更新比分笔记